2001-05-01  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/gtiff/geotiff.cpp: added GTiffBitmapBand support.

	* frmts/jpeg/jpgdataset.cpp: added world file support.

	* frmts/gtiff/geotiff.cpp: Use GDALReadWorldFile(), support .wld
	and .tifw as well as .tfw on read.

	* core/gdal_misc.cpp: added GDALReadWorldFile()

2001-04-18  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/ogdi/ogdidataset.cpp: fixed rastersize calculation.

2001-04-17  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/ogdi/*, ogr/ogrsf_frmts/ogdi/*: Modified to utilize layer
	capabilities to get list of available layers.  Restructured OGDI
	discovery mechanisms in configure script (more like other libraries).
	Added complete Image support.  Capture text from text features.

	* frmts/gtiff/geotiff.cpp: fixed acces to rw mode separate planes
	RGB images.

2001-04-05  Frank Warmerdam  <warmerdam@pobox.com>

	* updated mitab code from the mitab master.

2001-03-28  Frank Warmerdam  <warmerdam@pobox.com>

	* configure: changed to check for TIFFWriteCheck instead of
	TIFFReadRGBATile for libtiff check.  Ensures we get a sufficiently
	recent libtiff.

2001-03-24  Frank Warmerdam  <warmerdam@pobox.com>

	* configure: Make --with-ogr default, and user must indicate 
	--without-ogr.

2001-03-22  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/raw/ehdrdataset.cpp: added support for files generated
	by Arc/Info GRID which have a number of quirks, but can include
	nodata values, and projections (in .prj file). 

	* frmts/raw/rawdataset: added support for nodata values.

2001-03-21  Frank Warmerdam  <warmerdam@pobox.com>

	* GDALmake.opt.in: added port/*.o to GDAL_OBJ so that we don't
	depend on the shared library linker using cpl.a the way we expect.
	This should make things work cleaner on SGI.

2001-03-20  Frank Warmerdam  <warmerdam@pobox.com>

	* apps/gdal_translate.c: fixes from Mark Salazar.
	Added '%' for -outsize switch, fixed completion reporting, fixed
	adGeoTransform[] calculation.
